--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Bonus-Point",
   "version": "1.0.0-beta",
   "main": "main.js",
-  "description": "The Bonus Point desktop application allows teachers to track bonus or extra credit points for their students.",
+  "description": "Bonus Point allows teachers to track bonus or extra credit points for their students using a simple user interface.",
   "author": "mathhulk",
   "scripts": {
     "publish": "build -p always",
