--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bonus-Point",
-  "version": "1.0.0-beta.1",
+  "version": "1.1.0-beta",
   "main": "main.js",
   "description": "Bonus Point allows teachers to track bonus or extra credit points for their students using a simple user interface.",
   "author": "mathhulk",
