--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bonus-Point",
-  "version": "1.1.0-beta.2",
+  "version": "1.1.1-beta",
   "main": "main.js",
   "description": "Bonus Point allows teachers to track bonus or extra credit points for their students using a simple user interface.",
   "author": "mathhulk",
@@ -9,8 +9,8 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "^2.0.0-beta.8",
-    "electron-builder": "^20.13.3"
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1"
   },
   "dependencies": {
     "electron-store": "^1.3.0",
