--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "^2.0.2",
-    "electron-builder": "^20.15.1"
+    "electron": "^3.0.0-beta.3",
+    "electron-builder": "^20.26.1"
   },
   "dependencies": {
-    "electron-store": "^1.3.0",
-    "electron-updater": "^2.21.10"
+    "electron-store": "^2.0.0",
+    "electron-updater": "^3.0.3"
   },
   "build": {
     "appId": "net.mathhulk.bonus-point",
