--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bonus-Point",
-  "version": "1.3.1-beta",
+  "version": "1.3.1-beta.1",
   "main": "main.js",
   "description": "Bonus Point allows teachers to track bonus or extra credit points for their students using a simple user interface.",
   "author": "mathhulk",
@@ -9,7 +9,7 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "^3.0.0-beta.3",
+    "electron": "^3.0.0-beta.4",
     "electron-builder": "^20.26.1"
   },
   "dependencies": {
