--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bonus-Point",
-  "version": "1.3.1-beta.1",
+  "version": "1.3.1-beta.2",
   "main": "main.js",
   "description": "Bonus Point allows teachers to track bonus or extra credit points for their students using a simple user interface.",
   "author": "mathhulk",
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "electron-store": "^2.0.0",
-    "electron-updater": "^3.0.3"
+    "electron-updater": "^3.0.3",
+    "typeface-roboto": "0.0.54"
   },
   "build": {
     "appId": "net.mathhulk.bonus-point",
